# seasurface_detector

./: .gitignore  CMakeLists.txt  README.md
models/: classes.txt
src/: csv.cpp  csv.hpp  detector.cpp  detector.hpp  evaluator.cpp  evaluator.hpp  main.cpp  tracker.cpp  tracker.hpp  utils.cpp  utils.hpp
tools/: convert_coco_to_yolo.py  make_dataset_yaml.py  yolo_to_gt_csv.py
